Enhanced the PDF ingestion and highlighting of answer in documents. Further refinement is needed.